--- a/BookListApi/appsettings.json
+++ b/BookListApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS,1433;Database=agro_frotas_DEV;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
