Criação da migration de criação do banco.

--- a/BookListApi/appsettings.json
+++ b/BookListApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS,1433;Database=agro_frotas_DEV;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=true;"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=books;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
